--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,8 @@
+html {
+  /* scrollbar-gutter: stable; */
+  overflow-y: scroll;
+}
+
 button {
   cursor: pointer;
 }
